force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/cmtPRJCSCalendarificSetting__mdt.object-meta.xml
<CustomObject>
    <label>PRJCS Calendarific Setting</label>
    <pluralLabel>PRJCS Calendarific Settings</pluralLabel>
</CustomObject>