force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/fields/fldPRJCSApiKey__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSApiKey__c</fullName>
    <description>Calendarific API key. Stored in metadata config (not in Apex source) so secrets never live in code. User Story 4.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>