force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/fields/fldPRJCSApiVersion__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSApiVersion__c</fullName>
    <description>Calendarific API version segment used in the endpoint path (e.g. v2). User Story 4.</description>
    <label>API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>