force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/fields/fldPRJCSCountryCode__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSCountryCode__c</fullName>
    <description>ISO country code passed to the Calendarific API (ZA for South Africa). User Story 4.</description>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>