force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/fields/fldPRJCSDeepSeekKey__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSDeepSeekKey__c</fullName>
    <description>DeepSeek API key (Bearer). Stored in metadata, not in Apex source.</description>
    <label>DeepSeek Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>