force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/fields/fldPRJCSDeepSeekModel__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSDeepSeekModel__c</fullName>
    <description>DeepSeek model name, e.g. deepseek-chat (fast).</description>
    <label>DeepSeek Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>