force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/fields/fldPRJCSHolidayType__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSHolidayType__c</fullName>
    <description>Optional Calendarific holiday type filter. "national" returns public, federal and bank holidays; blank returns all types. User Story 4.</description>
    <label>Holiday Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>