force-app/main/default/objects/cmtPRJCSCalendarificSetting__mdt/fields/fldPRJCSNamedCredential__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSNamedCredential__c</fullName>
    <description>Developer name of the Named Credential used for the callout (decouples the endpoint from Apex). User Story 4.</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>